# terrain-aware-coverage

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demo/: radar-coverage-complete.html  radar-coverage-visualizer.html
docs/: ALGORITHM.md  INTEGRATION.md
include/: polygon_boolean.hpp  radar_coverage.hpp
src/: main.cpp
tests/: test_polygon_boolean.cpp
